# todo-app-rust-crud-api

./: Cargo.toml  Dockerfile  LICENSE  README.md  request.http
migrations/2022-04-18-155357_users/: up.sql
migrations/2022-04-20-095600_notes/: up.sql
migrations/2022-06-08-121700_sessions/: up.sql
src/: catchers.rs  db.rs  main.rs
src/controllers/: mod.rs  note_controllers.rs  user_controllers.rs
src/guards/: auth.rs
src/lib/: cors.rs
src/models/: mod.rs  note.rs  session.rs  user.rs
