[package]
name = "todo-app-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5.0-rc.1", features=["json"] }
jsonwebtoken = "8.1.0"
diesel = {version = "1.4.8", features = ["mysql", "r2d2"] }
diesel_migrations = "1.4.0"
chrono = "0.4.19"
bcrypt = "0.12.1"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_mysql_pool"]
